[package]
name = "oxidized_battlegroup"
version = "0.1.0"
authors = ["Lyco <zdenek.belehradek@seznam.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.117"
serde_derive = "1.0.117"

[dependencies.druid]
version = "0.6.0"
features = ["im"]