[package]
name = "oxidized_battlegroup"
version = "0.1.0"
authors = ["Lyco <zdenek.belehradek@seznam.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.cursive]
version = "0.15"
default-features = false
features = ["blt-backend"]
#features = ["crossterm-backend"]