[package]
name = "oxidized_battlegroup"
version = "0.1.0"
authors = ["Lyco <zdenek.belehradek@seznam.cz>"]
edition = "2018"

[[bin]]
name = "battlegroup"
path = "src/main.rs"

[[bin]]
name = "editor"
path = "src/editor.rs"

[dependencies]
egui_glium = "0.3.0"
egui = "0.3.0"
serde = "1.0.117"
serde_json = "1.0.59"
strum = "0.19.4"
strum_macros = "0.19.4"